@@ -1,4 +1,4 @@
-3.13.0+dev2 (2010-10-22)
+3.13.0+opt
 
 # The version string is the first line of this file.
 # It must be in the format described in stdlib/sys.mli
